--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <head><meta charset="utf-8"><title>DDK Home Page</title></head>
-<body><h1>Welcome to neoddk.github.io!</h1><p>This is my Page Sites。</p></body>
+<body><h1>Welcome to neoddk.github.io!</h1><p>This is my Page-Sites.</p></body>
 </html>
