--- a/p/mycube/index.html
+++ b/p/mycube/index.html
@@ -314,7 +314,7 @@
     <blockquote>
 <p>九月份开学时，宿舍楼下新开了家炸鸡店，于是我打算去尝尝鲜。第一次去的时候，老板拍着胸脯保证他家的炸鸡比肯德基麦当劳都要好吃，但出外面裹着的面糊油炸后的焦香太重，把炸鸡的鸡味掩盖了。我感到有些失望，但肯德基和麦当劳太贵了，我买不起，于是我相信了老板的话。吃了几次后，我发现店里橱柜的角落上了新品，长得像鱼豆腐。我问：</p></blockquote>
 <blockquote>
-<p>“老板，这鱼豆腐怎子卖的？”</p></blockquote>
+<p>“老板，这鱼豆腐怎么卖的？”</p></blockquote>
 <blockquote>
 <p>老板先是反驳我：“这不是鱼豆腐，是鸡豆腐”，然后顿了顿，自豪地说：“这是咱合肥的特色，外地找不到的！”</p></blockquote>
 <blockquote>
